@@ -58,22 +58,21 @@ optionally using MathML.
 
 <h3 id="docs">Documentation and tutorials</h3>
 <ul>
-<li><a href="doc/">The principal documentation</a>.
-<li><a href="/TUGboat/tb25-1/gurari.pdf">TeX4ht: HTML
-    production</a>, a tutorial/introductory article on using and
-    customizing TeX4ht.
-    <li><a href="/TUGboat/tb40-1/tb124hoftich-make4ht.pdf">TeX4ht: LaTeX to Web publishing</a>, more recent tutorial on customizing TeX4ht.</li>
-<li><a href="https://github.com/michal-h21/helpers4ht/wiki">helpers4ht</a>,
-    Michal Hoftich's wiki to document and simplify tex4ht usage.
-<li><a href="http://www.cvr.cc/?cat=16">CVR on TeX4ht</a>, blog
-    posts on practical aspects of working with tex4ht.
-<li><a href="http://12000.org/my_notes/faq/LATEX/layout/">tex4ht setup</a>
-    and <a
-    href="http://12000.org/my_notes/faq/LATEX/html_and_latex.htm">cheat
-    sheet</a> from Nasser Abbasi.
-  <li><a
-  href="https://tex.stackexchange.com/questions/tagged/tex4ht">Questions
-  about TeX4ht on tex.stackexchange.com</a>.</li>
+  <li><a href="https://www.kodymirus.cz/tex4ht-doc/tex4ht-doc.html">Work-in-progress documentation.</a></li>
+  <li><a href="doc/">The original documentation</a>.</li>
+  <li><a href="/TUGboat/tb25-1/gurari.pdf">TeX4ht: HTML production</a>, a tutorial/introductory article on using and
+    customizing TeX4ht.  </li>
+  <li><a href="/TUGboat/tb40-1/tb124hoftich-make4ht.pdf">TeX4ht: LaTeX to Web publishing</a>, 
+    more recent tutorial on customizing TeX4ht.  </li>
+  <li><a href="https://github.com/michal-h21/helpers4ht/wiki">helpers4ht</a>,
+  Michal Hoftich's wiki to document and simplify tex4ht usage.</li>
+  <li><a href="http://www.cvr.cc/?cat=16">CVR on TeX4ht</a>, blog
+    posts on practical aspects of working with tex4ht.</li>
+  <li><a href="http://12000.org/my_notes/faq/LATEX/layout/">tex4ht setup</a>
+    and <a href="http://12000.org/my_notes/faq/LATEX/html_and_latex.htm">cheat
+      sheet</a> from Nasser Abbasi.</li>
+  <li><a href="https://tex.stackexchange.com/questions/tagged/tex4ht">Questions
+      about TeX4ht on tex.stackexchange.com</a>.</li>
 </ul>
 
 <h3>Tools</h3>
