@@ -1,3 +1,7 @@
+2022-08-18  Michal Hoftich  <michal.h21@gmail.com>
+
+	* index.html: added link to the new documentation.
+
 2020-07-04  Michal Hoftich  <michal.h21@gmail.com>
 
 	* development.html: working on splitting text to subpages.
